[package]
name = "smallpt"
version = "0.2.0"
authors = ["MJohnson459 <mjohnson459@gmail.com>"]

[features]
unstable = []

[dependencies]
rand = "*"
threadpool = "*"
num_cpus = "*"
docopt = "*"
image = "*"
time = "*"
rayon = "*"
serde = "1.0.27"
serde_derive = "1.0.27"

[profile.release]
debug = true
