[package]
name = "smallpt"
version = "0.2.0"
authors = ["MJohnson459 <mjohnson459@gmail.com>"]

[features]
unstable = []

[dependencies]
rand = "0.4"
threadpool = "1.7"
num_cpus = "1.8"
docopt = "0.8"
image = "0.18"
time = "0.1"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
cgmath = "0.16"
num-traits = "0.2"


[profile.release]
debug = true
